[gd_scene load_steps=4 format=3 uid="uid://dcu1conk87mg1"]

[ext_resource type="Script" path="res://Multiplayer_Controller.gd" id="1_5hp55"]
[ext_resource type="StyleBox" uid="uid://vtl8y2jaix5p" path="res://connection_screen_button.tres" id="2_rsn1f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jlyt"]
bg_color = Color(0.388235, 0.0941176, 0.207843, 1)

[node name="Connection Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5hp55")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 105.0
offset_right = 222.0
offset_bottom = 144.0
theme_override_colors/icon_normal_color = Color(0.615686, 0.137255, 0.215686, 1)
theme_override_styles/normal = ExtResource("2_rsn1f")
text = "Host"

[node name="Join" type="Button" parent="."]
offset_left = 269.0
offset_top = 104.0
offset_right = 404.0
offset_bottom = 143.0
theme_override_colors/icon_normal_color = Color(0.615686, 0.137255, 0.215686, 1)
theme_override_styles/normal = ExtResource("2_rsn1f")
text = "Join"

[node name="StartGame" type="Button" parent="."]
offset_left = 460.0
offset_top = 104.0
offset_right = 595.0
offset_bottom = 143.0
theme_override_colors/icon_normal_color = Color(0.615686, 0.137255, 0.215686, 1)
theme_override_styles/normal = ExtResource("2_rsn1f")
text = "Start Game"

[node name="Username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 42.0
offset_right = 499.0
offset_bottom = 73.0
theme_override_styles/normal = SubResource("StyleBoxFlat_1jlyt")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 108.0
offset_top = 44.0
offset_right = 165.0
offset_bottom = 71.0
text = "Name:"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
